--- a/index_en.html
+++ b/index_en.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html title="123">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>麻醉安全通</title>
-    <meta property="og:image" content="assets/img/logo.jpg">
+    <title>Home - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -33,7 +32,7 @@
             <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
                 <div class="container">
                     <div class="row flex-row" style="width: 400px;">
-                        <div class="col-sm-12 offset-sm-0" style="width: 400px;"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand logo" href="index.html" style="width: 360px;height: 360px;">&nbsp; <img src="assets/img/logo.jpg" width="60px" height="60px" style="--bs-body-bg: #fff;">&nbsp;<span style="font-size: 30px;">麻醉安全通</span></a><a href="#" style="width: 60px;height: 60px;" data-bs-toggle="modal" data-bs-target="#modal-1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-qrcode float-sm-end float-md-end float-lg-none" style="width: 60px;height: 60px;margin-left: 0px;margin-right: 10px;">
+                        <div class="col-sm-12 offset-sm-0" style="width: 400px;"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand logo" href="index.html" style="width: 360px;height: 360px;">&nbsp; <img src="assets/img/logo.jpg" width="60px" height="60px" style="--bs-body-bg: #fff;">&nbsp;<span style="font-size: 30px;">麻醉安全通</span></a><a href="#" style="width: 60px;height: 60px;" data-bs-toggle="modal" data-bs-target="#modal-1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-qrcode float-sm-end float-md-end float-lg-none" style="width: 60px;height: 60px;margin-left: 0px;margin-right: 10px;">
                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                     <rect x="4" y="4" width="6" height="6" rx="1"></rect>
                                     <line x1="7" y1="17" x2="7" y2="17.01"></line>
@@ -51,7 +50,7 @@
                         <div class="col-12"><span class="text-center d-sm-flex justify-content-sm-center justify-content-md-center justify-content-lg-center justify-content-xl-center justify-content-xxl-around" style="color: #ff0018;width: 388px;text-align: center;">Rating Anesthesia Safety TW</span></div>
                     </div>
                     <div class="container">
-                        <div class="collapse navbar-collapse" id="navcol-2">
+                        <div class="collapse navbar-collapse" id="navcol-1">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item dropdown" style="padding-right: 5px;"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">項目專區</a>
                                     <div class="dropdown-menu"><a class="dropdown-item" href="search.html">查詢醫院診所</a><a class="dropdown-item" href="mines.html">麻醉地雷</a><a class="dropdown-item" href="https://www.facebook.com/CrazyForAnesthesia">麻醉常識</a><a class="dropdown-item" href="examiner.html">民間麻醉醫糾鑑定</a><a class="dropdown-item" href="concern.html">手術關照</a></div>
@@ -81,7 +80,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-3">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-dialog">
@@ -90,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade" role="dialog" tabindex="-1" id="modal-2">
+            <div class="modal fade" role="dialog" tabindex="-1" id="modal-4">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-dialog modal-login">
@@ -254,9 +253,6 @@
                             <p class="text-muted my-2" style="font-size: 21px;color: rgb(0,0,0);text-align: left;"><span style="color: rgb(0, 0, 0);">你可以用電子郵件聯絡我們</span><br></p>
                             <p class="text-muted my-2" style="font-size: 20px;color: rgb(0,0,0);text-align: left;"><span style="text-decoration: underline; color: rgb(0, 0, 0);">callmaan110@gmail.com</span><br></p>
                         </div>
-                    </div>
-                    <div class="footer-copyright">
-                        <p>© 2022 Copyright Text</p>
                     </div>
                 </div>
             </footer>
